Overwrite existing files with moveFile. https://bugs.webkit.org/show_bug.cgi?id=143968

Reviewed by Brady Eidson and Anders Carlsson.

* platform/mac/FileSystemMac.mm:
(-[WebFileManagerDelegate fileManager:shouldProceedAfterError:movingItemAtURL:toURL:]):
(WebCore::moveFile):
r182932 introduced moveFile instead of renameFile.  In order to preserve behavior, it should overwrite existing files.



Canonical link: https://commits.webkit.org/161954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183035 268f45cc-cd09-0410-ab3c-d52691b4dbfc